<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Daily Quote</string>

    <string name="today_heading">Quote of the day</string>
    <string name="today_empty">No quotes yet. Add one below to get started.</string>

    <string name="your_quotes">Your quotes</string>
    <string name="empty_list">You haven\'t added any quotes yet.</string>

    <string name="add_quote">Add quote</string>
    <string name="edit_quote">Edit quote</string>

    <string name="quote_hint">Quote</string>
    <string name="author_hint">Author (optional)</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="saved">Saved</string>

    <string name="error_empty_quote">Please enter a quote</string>

    <string name="delete_title">Delete quote?</string>
    <string name="delete_message">This can\'t be undone.</string>

    <string name="widget_empty">Add a quote in the Daily Quote app</string>

    <string name="notification_title">Quote of the day</string>
    <string name="channel_name">Daily quote</string>
    <string name="channel_description">Your daily quote notification</string>

    <string name="delete_content_description">Delete quote</string>

    <string name="export_quotes">Export / back up quotes</string>
    <string name="import_quotes">Import quotes</string>
    <string name="export_success">Quotes backed up</string>
    <string name="export_failed">Couldn\'t save the backup</string>
    <string name="import_failed">Couldn\'t read that file</string>
    <string name="import_none">No new quotes to import</string>
    <string name="export_filename">daily-quotes-backup.json</string>
</resources>
